// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test Timeline Item render - Horizontal 1`] = `
<div
  class="sc-jrsJCI jrJYYY horizontal"
  data-testid="timeline-item"
>
  <div
    class="sc-iqAbSa jCfIgE"
  >
    <div
      class="sc-crzoUp eTkkct horizontal active"
      data-testid="timeline-circle"
    />
  </div>
  <div
    class="sc-dIsAE kPRNOX horizontal top"
    data-testid="timeline-title"
  >
    <div
      class="sc-pNWxx enbFGE active"
      title="test title"
    >
      test title
    </div>
  </div>
</div>
`;

exports[`Test Timeline Item render - Vertical 1`] = `
<div
  class="sc-jrsJCI jrJYYY vertical"
  data-testid="timeline-item"
>
  <div
    class="sc-iqAbSa jCfIgE"
  >
    <div
      class="sc-crzoUp eTkkct vertical active"
      data-testid="timeline-circle"
    />
  </div>
  <div
    class="sc-bqGHjH kRxa-dL vertical"
  >
    <div
      class="sc-dIsAE kPRNOX vertical bottom"
      data-testid="timeline-title"
    >
      <div
        class="sc-pNWxx enbFGE active"
        title="test title"
      >
        test title
      </div>
    </div>
    <div
      class="sc-bdnylx hCfMCf active"
    >
      <span
        class="sc-gtssRu gtPOxj"
      >
        This is a test content
      </span>
      <div
        class="sc-eCApGN jmcrwE show-less"
      />
      <span
        class="sc-jSFkmK fWqWpN show-more"
        role="button"
      >
        show more
      </span>
    </div>
  </div>
</div>
`;
